# cwl-ica-cli

./: .gitignore  Dockerfile  README.md  cwl-ica-conda-env.yaml  cwltool-icav1-conda-env.yaml  install.sh  my_data.yaml  prod_bunch.yaml  pyproject.toml  reference_dataset.yaml  staging_bunch.yaml  validation_cups_pair8_dataset.yaml
.github/scripts/: update_autocompletion.sh
.github/workflows/: create_release_assets.yml  update_auto_completion.yml
autocompletion/: run-autocompletion.sh
autocompletion/bash/: cwl-ica.bash
autocompletion/helpers/: _cwl-ica_list_all_expression_paths.py  _cwl-ica_list_all_schema_paths.py  _cwl-ica_list_all_tool_paths.py  _cwl-ica_list_all_workflow_paths.py  (+17 more)
classes/: cwl.py  cwl_expression.py  cwl_schema.py  cwl_tool.py  cwl_workflow.py  dockstore.py  ica_task_run.py  ica_workflow.py  ica_workflow_run.py  ica_workflow_version.py  icav2_bunch_classes.py  icav2_launch_json.py  item.py  item_schema.py  item_tool.py  item_workflow.py  project.py  project_production.py
scripts/: create_typescript_interface_from_schema.py  initialise_typescript_expression_directory.sh  validate_typescript_expressions_directory.sh
src/: cwl-ica-conda-env.yaml
utils/: cli.py  conda.py  create_markdown_utils.py  cwl_helper_utils.py  cwl_schema_helper_utils.py  cwl_utils_typing_helpers.py  cwl_workflow_helper_utils.py  dockstore_helpers.py  docopt_helpers.py  errors.py  gh_helpers.py  globals.py  ica_markdown_utils.py  ica_utils.py  icav2_gh_helpers.py  icav2_helpers.py  icav2_websocket_helpers.py  input_template_utils.py  logging.py  miscell.py  project.py  pydot_utils.py  repo.py  subprocess_handler.py  typescript_helpers.py  yaml.py
(+218 files in other folders)
